issue1のコメント内容修正

--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -6,7 +6,7 @@
       </p>
       <%= link_to "by #{@prototype.user.name}", user_path(@prototype.user_id), class: :prototype__user %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
-      <% if @prototype.user_id == current_user.id %>
+      <% if user_signed_in? && @prototype.user_id == current_user.id %>
         <div class="prototype__manage">
           <%= link_to "編集する", edit_prototype_path(@prototype), class: :prototype__btn %>
           <%= link_to "削除する", prototype_path(@prototype), class: :prototype__btn, method: :delete %>
@@ -33,13 +33,13 @@
       <div class="prototype__comments">
         <%# ログインしているユーザーには以下のコメント投稿フォームを表示する %>
         <% if user_signed_in? %>
-        <%= form_with(model: [@prototype, @comment], local: true) do |f|%>
+        <%= form_with(model: [@prototype, @comment], local: true, id: "comment_form") do |f|%>
             <div class="field">
               <%= f.label :content, "コメント" %><br />
               <%= f.text_field :content, id:"comment_content" %>
             </div>
             <div class="actions">
-              <%= f.submit "送信する", class: :form__btn  %>
+              <%= f.submit "送信する", class: :form__btn, id: "form__btn"  %>
             </div>
           <% end %>
         <% end %>
@@ -52,6 +52,8 @@
                 <%= link_to "#{comment.user.name}", user_path(comment.user_id), class: :comment_user %>
               </li>
             <% end %>
+          <div id="comment_list">
+          </div>
           <%# // 投稿に紐づくコメントを一覧する処理を記述する %>
         </ul>
       </div>
