--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -52,7 +52,7 @@
                 <%= link_to "#{comment.user.name}", user_path(comment.user_id), class: :comment_user %>
               </li>
             <% end %>
-          <div id="comment_list">
+          <%#<div id="comment_list">
           </div>
           <%# // 投稿に紐づくコメントを一覧する処理を記述する %>
         </ul>
